--- a/BlizzardApiWeaponRetriever/BlizzardApiWeaponRetriever.csproj
+++ b/BlizzardApiWeaponRetriever/BlizzardApiWeaponRetriever.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="dotenv.net" Version="3.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="RestSharp" Version="111.4.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
